--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@ a {
   }
 }
 
-@media sreen and (max-width: 700px) {
+@media screen and (max-width: 700px) {
   .section__padding {
     padding: 4rem;
   }
@@ -82,7 +82,7 @@ a {
   }
 }
 
-@media sreen and (max-width: 550px) {
+@media screen and (max-width: 550px) {
   .section__padding {
     padding: 4rem 2rem;
   }
