--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -109,6 +109,12 @@
   }
 }
 
+@media screen and (max-width: 1150px) {
+  .gpt3__header-image img {
+    object-fit: contain;
+  }
+}
+
 @media screen and (max-width: 650px) {
   .gpt3__header h1 {
     font-size: 48px;
