--- a/src/components/article/article.css
+++ b/src/components/article/article.css
@@ -48,6 +48,14 @@
   cursor: pointer;
 }
 
+.gpt3__blog-container_article-content h5 {
+  line-height: 18px;
+  font-weight: normal;
+  color: var(--color-text);
+  margin-top: -2.5rem;
+  margin-bottom: 2rem;
+}
+
 @media screen and (max-width: 550px) {
   .gpt3__blog-container_article-content h3 {
     font-size: 18px;
