--- a/src/containers/blog/blog.css
+++ b/src/containers/blog/blog.css
@@ -10,5 +10,76 @@
 }
 
 .gpt3__blog-heading h1 {
+  font-weight: 800;
+  font-size: 62px;
+  line-height: 75px;
+  letter-spacing: -0.04em;
+}
 
+.gpt3__blog-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.gpt3__blog-container_groupA {
+  flex: 0.75;
+  margin-right: 2rem;
+  margin-bottom: 2rem;
+  margin-top: -2.5rem;
+}
+.gpt3__blog-container_groupB {
+  flex: 1;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+}
+
+.gpt3__blog-container_groupA-last {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 24px;
+  color: #81AFDD;
+  margin-bottom: 1rem;
+}
+
+.gpt3__blog-container_groupA h5 {
+  font-size: 16px;
+  line-height: 25px;
+}
+
+@media screen and (max-width: 990px) {
+  .gpt3__blog-container {
+    flex-direction: column;
+  }
+
+  .gpt3__blog-container_groupA {
+    margin: 0 0 4rem 0;
+  }
+
+  .gpt3__blog-container_groupA h5 {
+    font-size: 14px;
+    line-height: 21px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .gpt3__blog-container_groupB {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .gpt3__blog-container_groupA .gpt3__blog-container_article-image {
+    height: 250px;
+  }
+
+  .gpt3__blog-heading h1 {
+    font-size: 46px;
+    line-height: 52px
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .gpt3__blog-heading h1 {
+    font-size: 34px;
+    line-height: 42px
+  }
 }
